--- a/flask-app-bay-area-rockers-255/requirements.txt
+++ b/flask-app-bay-area-rockers-255/requirements.txt
@@ -6,6 +6,7 @@ anyio==3.7.1
 appnope==0.1.3
 asgiref==3.7.2
 asttokens==2.4.0
+async-timeout==4.0.3
 attrs==23.1.0
 backcall==0.2.0
 bleach==6.1.0
@@ -26,6 +27,7 @@ Django==4.2.7
 djangorestframework==3.14.0
 docx2txt==0.8
 escape==1.1
+exceptiongroup==1.2.0
 executing==1.2.0
 faiss-cpu==1.7.4
 filelock==3.13.1
@@ -34,6 +36,7 @@ fonttools==4.42.1
 frozenlist==1.4.0
 gitdb==4.0.11
 GitPython==3.1.40
+gunicorn==21.2.0
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.25.2
