--- a/flask-app-bay-area-rockers-255/requirements.txt
+++ b/flask-app-bay-area-rockers-255/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.0.0
 aiohttp==3.9.0
 aiosignal==1.3.1
 altair==5.2.0
@@ -6,17 +7,18 @@ anyio==3.7.1
 appnope==0.1.3
 asgiref==3.7.2
 asttokens==2.4.0
-async-timeout==4.0.3
 attrs==23.1.0
 backcall==0.2.0
 bleach==6.1.0
 blinker==1.7.0
 cachetools==5.3.2
 certifi==2023.7.22
+cffi @ file:///private/tmp/cffi-20231014-5567-1hyue8f/cffi-1.16.0
 charset-normalizer==3.2.0
 click==8.1.7
 comm==0.1.4
 contourpy==1.1.0
+cryptography @ file:///private/tmp/python-cryptography-20231024-6375-1k9sys9/cryptography-41.0.5
 cycler==0.11.0
 dataclasses-json==0.6.2
 debugpy==1.6.7.post1
@@ -27,7 +29,6 @@ Django==4.2.7
 djangorestframework==3.14.0
 docx2txt==0.8
 escape==1.1
-exceptiongroup==1.2.0
 executing==1.2.0
 faiss-cpu==1.7.4
 filelock==3.13.1
@@ -36,7 +37,7 @@ fonttools==4.42.1
 frozenlist==1.4.0
 gitdb==4.0.11
 GitPython==3.1.40
-gunicorn==21.2.0
+gunicorn==20.0.4
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.25.2
@@ -70,6 +71,7 @@ nest-asyncio==1.5.7
 nltk==3.8.1
 numpy==1.25.2
 openai==1.3.6
+ortools==9.8.3296
 packaging==23.1
 pandas==2.1.0
 parso==0.8.3
@@ -84,6 +86,7 @@ psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==14.0.1
+pycparser @ file:///private/tmp/pycparser-20231013-5787-1anpge2/pycparser-2.21
 pydantic==2.5.1
 pydantic_core==2.14.3
 pydeck==0.8.1b0
@@ -96,7 +99,7 @@ python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-slugify==8.0.1
 pytz==2023.3
-PyYAML==6.0.1
+PyYAML @ file:///private/tmp/pyyaml-20231018-5610-1rdh755/PyYAML-6.0.1
 pyzmq==25.1.1
 referencing==0.31.0
 regex==2023.10.3
@@ -124,7 +127,7 @@ tqdm==4.66.1
 traitlets==5.9.0
 typing==3.7.4.3
 typing-inspect==0.9.0
-typing_extensions==4.8.0
+typing_extensions @ file:///private/tmp/python-typing-extensions-20231008-5501-1ralzsu/typing_extensions-4.8.0
 tzdata==2023.3
 tzlocal==5.2
 urllib3==2.0.4
